@@ -1,7 +1,7 @@
 === DarkElements ===
 Contributors: Guido07111975
 Donate link: https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=donation%40guidovanderleest%2enl
-Version: 5.2
+Version: 5.3
 Requires at least: 4.2
 Tested up to: 4.7
 License: GNU General Public License v3 or later
