@@ -1,7 +1,7 @@
 /*
 Theme Name: DarkElements
 Theme URI: http://www.guidovanderleest.nl/darkelements
-Version: 5.2
+Version: 5.3
 Author: Guido van der Leest
 Author URI: http://www.guidovanderleest.nl
 Description: DarkElements is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Features: sidebar, sidebar navigation, footer widgets, custom header image, custom background, custom logo to replace site title and tagline. For more info please check readme file. Enjoy.
@@ -67,7 +67,7 @@ table {
 
 /* BODY AND CONTAINER */
 body {background:#333; color:#ddd; font-family:'Open Sans', sans-serif; font-size:0.9em; line-height:1.5em; text-align:left; word-wrap:break-word;}
-#container {max-width:1000px; position:relative; background:none; margin:20px 0 20px 20px;}
+#container {max-width:1000px; position:relative; margin:20px 0 20px 20px;}
 #container:after {content:''; display:block; height:0; clear:both;}
 
 
@@ -134,17 +134,17 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 
 /* SIDEBAR */
-#sidebar {width:22%; float:left; padding:20px 2% 30px; background:#333 url('images/back.png'); border-bottom-left-radius:50px; border-bottom-right-radius:50px; opacity:0.9; filter:alpha(opacity=90);}
+#sidebar {width:22%; float:left; padding:20px 2%; background:#333 url('images/back.png'); border-bottom-left-radius:50px; border-bottom-right-radius:50px; opacity:0.9; filter:alpha(opacity=90);}
 
 
 /* SIDEBAR LOGO */
-.logo {width:100%; clear:both; float:left; text-align:center; padding:0 0 20px;}
+.logo {clear:both; padding:0 0 20px; text-align:center;}
 .logo h2 {padding:5px 0; font-size:1.20em;}
 .logo img {padding:10px 0 0;}
 
 
 /* SIDEBAR MENU */
-.nav-primary {width:100%; clear:both; float:left; padding:5px 0;}
+.nav-primary {width:100%; clear:both; float:left; margin:0 0 20px;}
 .nav-primary select {display:none;}
 .nav-primary ul {padding:0; margin:0; z-index:999; list-style:none;}
 .nav-primary ul li {position:relative; padding:0; margin:0;}
@@ -163,8 +163,8 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* WIDGETS */
 #sidebar-widgets {width:100%; clear:both; float:left;}
-.widget {padding:10px 0; margin:0 0 10px; background:none;}
-.widgettitle {clear:both; color:#ddd; padding:0 0 5px; margin:0 0 10px; border-bottom:1px solid #444;}
+.widget {margin:0 0 20px;}
+.widgettitle {clear:both; padding:0 0 5px; margin:0 0 10px; color:#ddd; border-bottom:1px solid #444;}
 
 
 /* CALENDAR WIDGET */
@@ -192,6 +192,7 @@ button {font-size:1em; font-family:'Open Sans', sans-serif;}
 
 /* POST */
 .post-list {width:100%; clear:both; float:left;}
+.post-single {width:100%; clear:both; float:left;}
 .post-title {clear:both; margin:0 0 20px;}
 .post-title-single {clear:both; margin:0 0 20px;}
 .entry-content {width:100%; clear:both; float:left; margin:0 0 20px;}
@@ -279,11 +280,9 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 /* FOOTER WIDGET AREA */
 #footer-widgets {width:100%; clear:both; float:left;}
-.footer-left {float:left; width:31%; margin:10px 0 0 0;}
-.footer-middle {float:left; width:31%; margin:10px 3.5%;}
-.footer-right {float:right; width:31%; margin:10px 0 0 0;}
-
-#footer .widget {padding:0; margin:10px 0 0;}
+.footer-left {float:left; width:31%; margin:20px 0 0 0;}
+.footer-middle {float:left; width:31%; margin:20px 3.5% 0;}
+.footer-right {float:right; width:31%; margin:20px 0 0 0;}
 
 
 /* Tablet */
@@ -301,33 +300,29 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 	#container {width:96%; padding:10px 2%; margin:0 auto 0; background:#333 url('images/back.png');}
 
 	/* MAIN CONTENT AREA */
-	#content {width:100%; clear:both; float:left; padding:10px 0; background:none;}
+	#content {width:100%; clear:both; float:left; padding:10px 0 20px; background:none;}
 
 	/* SIDEBAR */
 	#sidebar {width:100%; clear:both; padding:0; background:none;}
 
 	/* SIDEBAR LOGO */
-	.logo {padding:10px 0;}
+	.logo {padding:10px 0 20px;}
 	.logo h1 {font-size:2.25em;}
 	.logo h2 {padding:0; font-size:1.45em;}
 	.logo img {padding:0;}
 
 	/* SIDEBAR MENU */
 	.nav-primary ul {display:none;} 
-	.nav-primary {margin:0 0 10px; padding:0;}
 	.nav-primary select {width:100%; display:block; margin:0 auto 0; font-size:1em; line-height:1.2em;}
 
 	/* SIDEBAR MENU TITLE */
 	.nav-primary-title {display:none;}
 
-	/* WIDGETS */
-	.widget {padding:5px 0; margin:0 0 5px;}
-
 	/* HEADER IMAGE */
 	#header-image {display:none;}
 
 	/* HEADER IMAGE MOBILE */
-	#header-image-mobile {display:block; width:100%; float:left; background:none;}
+	#header-image-mobile {display:block; width:100%; float:left; margin:0 0 20px;}
 
 	/* HEADINGS */
 	.post-title, .page-title, .post-title-single {font-size:1.80em;}
@@ -341,5 +336,4 @@ img.aligncenter {display:block; margin:0.4em auto 0.4em auto;}
 
 	/* FOOTER WIDGET AREA */
 	.footer-right, .footer-middle, .footer-left {width:100%; clear:both; float:left; margin:0;} 
-	#footer .widget {padding:5px 0; margin:0 0 5px;}
 }
