@@ -1,6 +1,10 @@
 CHANGELOG
 =========
 
+DarkElements version 5.3 - april 2017
+- file single: added post class .post-single
+- file style: changed margin and padding of several elements (layout improvement)
+
 DarkElements version 5.2 - march 2017
 - file style: changed margin of several elements to avoid margin collapsing
 - cleaned up file style
